# ngit

./: .gitignore  CMakeLists.txt  main.c
include/: command_data.h  commands.h  errors.h  ngit_errors.h  tokens.h  utils.h
src/: command_data.c  main.c  ngit_errors.c  tokens.c
